<resources>
    <string name="app_name">ToDo List</string>
    <string name="add_task_text">Add a new task</string>
    <string name="task_name_placeholder">first task to be completed</string>
    <string name="date_placeholder_text">11/11/2022</string>
    <string name="edit_button_text">Edit</string>
    <string name="task_name_label_text">Enter the task:</string>
    <string name="task_details_label_text">Additional notes:</string>
    <string name="due_date_label_text">Enter a due date?</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="delete_button_text">Delete</string>
    <string name="task_complete_label_text">Completed?</string>
    <string name="delete_task">Delete</string>
    <string name="delete_dialog_title">Delete this Task?</string>
    <string name="are_you_sure_text">Are you sure?</string>
</resources>