<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/list_item_background_colour">

    <FrameLayout
        android:id="@+id/List_Item_Frame_Layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/layout_border">

        <TextView
            android:id="@+id/Task_Name_TextView"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/task_name_margin_start"
            android:layout_marginTop="@dimen/task_name_margin_top"
            android:text="@string/task_name_placeholder"
            android:textColor="@color/black"
            android:textSize="@dimen/task_name_text_size" />

        <TextView
            android:id="@+id/Due_Date_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/date_margin_start"
            android:layout_marginBottom="@dimen/date_margin_bottom"
            android:text="@string/date_placeholder_text"
            android:textColor="@color/black"
            android:textSize="@dimen/date_text_size" />

        <Button
            android:id="@+id/Edit_Button"
            android:layout_width="@dimen/edit_button_width_height"
            android:layout_height="@dimen/edit_button_width_height"
            android:layout_gravity="center|end"
            android:layout_marginEnd="@dimen/edit_button_margin_end"
            android:text="@string/edit_button_text" />

        <CheckBox
            android:id="@+id/Task_Completed_CheckBox"
            android:layout_width="@dimen/checkbox_width_height"
            android:layout_height="@dimen/checkbox_width_height"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/checkbox_margin_top"
            android:scaleX="@dimen/checkbox_scale_x_y"
            android:scaleY="@dimen/checkbox_scale_x_y" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>