<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main_Constraint_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:visibility="visible">

    <FrameLayout
        android:id="@+id/Details_Page_Button_FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/button_layout_margin_top"
        android:layout_marginEnd="@dimen/button_layout_margin_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Save_Button"
            android:layout_width="@dimen/details_page_button_width"
            android:layout_height="@dimen/details_page_button_height"
            android:layout_gravity="start|center_vertical"
            android:backgroundTint="@color/regular_button_colour"
            android:text="@string/save_button_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/Cancel_Button"
            android:layout_width="@dimen/details_page_button_width"
            android:layout_height="@dimen/details_page_button_height"
            android:layout_gravity="center|center_vertical"
            android:backgroundTint="@color/regular_button_colour"
            android:onClick="addCancelClicked"
            android:text="@string/cancel_button_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/Delete_Button"
            android:layout_width="@dimen/details_page_button_width"
            android:layout_height="@dimen/details_page_button_height"
            android:layout_gravity="center_vertical|end"
            android:backgroundTint="@color/accent_button_colour"
            android:text="@string/delete_button_text"
            tools:ignore="TextContrastCheck" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/Task_Name_FrameLayout"
        android:layout_width="@dimen/details_page_width"
        android:layout_height="@dimen/task_name_framelayout_height"
        android:layout_marginStart="@dimen/input_fields_layout_margin_start"
        android:layout_marginTop="@dimen/task_name_margin_top"
        android:layout_marginEnd="@dimen/button_layout_margin_start"
        android:background="@drawable/layout_border_unchecked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/Task_Name_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_page_start_margin"
            android:text="@string/task_name_label_text"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size" />

        <EditText
            android:id="@+id/Task_Name_EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/task_name_edittext_height"
            android:layout_marginTop="@dimen/task_name_edittext_margin_top"
            android:autofillHints=""
            android:background="@drawable/layout_border_unchecked"
            android:ems="10"
            android:hint="@string/task_name_label_text"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/input_fields_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_colour"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/Task_Details_FrameLayout"
        android:layout_width="@dimen/details_page_width"
        android:layout_height="@dimen/task_details_frame_height"
        android:layout_marginStart="@dimen/input_fields_layout_margin_start"
        android:layout_marginTop="@dimen/task_details_margin_top"
        android:layout_marginEnd="@dimen/button_layout_margin_start"
        android:background="@drawable/layout_border_unchecked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/Task_Details_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_details_label_text"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size" />

        <EditText
            android:id="@+id/Task_Details_EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/task_details_input_height"
            android:layout_marginTop="@dimen/task_details_edittext_margin_top"
            android:autofillHints=""
            android:background="@drawable/layout_border_unchecked"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/task_details_label_text"
            android:inputType="textMultiLine"
            android:paddingStart="@dimen/input_fields_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_colour"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/Task_Complete_FrameLayout"
        android:layout_width="@dimen/details_page_width"
        android:layout_height="@dimen/task_completed_height"
        android:layout_marginStart="@dimen/input_fields_layout_margin_start"
        android:layout_marginTop="588dp"
        android:layout_marginEnd="@dimen/button_layout_margin_start"
        android:background="@drawable/layout_border_unchecked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Task_Complete_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/details_page_start_margin"
            android:text="@string/task_complete_label_text"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size" />

        <CheckBox
            android:id="@+id/Details_Page_CheckBox"
            android:layout_width="@dimen/checkbox_width_height"
            android:layout_height="@dimen/checkbox_width_height"
            android:layout_gravity="center_vertical|end"
            android:layout_marginTop="@dimen/checkbox_margin_top"
            android:layout_marginEnd="@dimen/checkbox_margin_end"
            android:scaleX="@dimen/checkbox_scale_x_y"
            android:scaleY="@dimen/checkbox_scale_x_y" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/Due_Date_FrameLayout"
        android:layout_width="@dimen/details_page_width"
        android:layout_height="@dimen/date_framelayout_height"
        android:layout_marginStart="@dimen/input_fields_layout_margin_start"
        android:layout_marginTop="@dimen/due_date_margin_top"
        android:layout_marginEnd="@dimen/button_layout_margin_start"
        android:background="@drawable/layout_border_unchecked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/Due_Date_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_page_start_margin"
            android:text="@string/due_date_label_text"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size" />

        <Switch
            android:id="@+id/Due_Date_Enabled_Switch"
            android:layout_width="@dimen/date_switch_layout_height"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/date_switch_margin_top"
            android:layout_marginEnd="@dimen/date_switch_margin_end"
            android:checked="false"
            android:scaleX="@dimen/checkbox_scale_x_y"
            android:scaleY="@dimen/checkbox_scale_x_y"
            tools:checked="true"
            tools:ignore="TouchTargetSizeCheck" />

        <CalendarView
            android:id="@+id/Due_Date_CalendarView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calendar_layout_height"
            android:layout_marginTop="@dimen/calendar_margin_top"
            android:background="@drawable/layout_border_unchecked"
            android:dateTextAppearance="@style/CalenderViewWeekCustomText"
            android:theme="@style/CalenderViewCustom"
            android:weekDayTextAppearance="@style/CalenderViewDateCustomText" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>